--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
